# rust-common-deps

./: .gitignore  Cargo.toml  Makefile  README.md  main.py  pyproject.toml
.cargo/: config.toml
sqlx-deps/: Cargo.toml
