[package]
name = "sqlx-deps"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"                  # MSRV
description = "Rust common dependencies"

[package.metadata.vendor-filter]
platforms = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
]

[dependencies]
sqlx = { package = "sqlx", version = "0.7.4", features = [
    "runtime-tokio",
    "sqlite",
    "mysql",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "rust_decimal",
] }
